# Trabalho-Final-DE1-S0C---Sistema-Embarcados-2026.1

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  arm_toolchain.cmake  build_err_u8.txt  build_err_utf8.txt  build_errors.txt  gemini.md  send_metalslug.ps1
animacao/: animacao.c
backup_seguro/ataques/tiros/: tiro.c
backup_seguro/cenario/fase3/: fase3_dados.c
backup_seguro/framebuffer/: framebuffer_sdl.c
backup_seguro/include/cenario/: cenario.h  fases.h
backup_seguro/include/cenario/fase2/: fase2.h
backup_seguro/include/cenario/fase3/: fase3.h
backup_seguro/include/final_tela/: final_tela.h
backup_seguro/include/framebuffer/: framebuffer.h
backup_seguro/include/game_over/: game_over.h
backup_seguro/include/hardware/: hardware_state.h
backup_seguro/include/icones/: icone_instakill.h  icone_super_pulo.h  icone_velocidade.h  icone_vida.h
backup_seguro/include/inimigo/: inimigo.h
backup_seguro/include/inimigos/soldado/: soldado.h  soldado_atirar.h  soldado_atirar_agachado.h  soldado_correr.h  soldado_explosao.h  soldado_paraquedas.h
backup_seguro/include/menu/: menu.h
backup_seguro/include/personagem/achilles/movimentos/: achilles_atirar.h
backup_seguro/include/personagem/megamem/movimentos/: megaman_atirar_cima.h  megaman_atirar_diagonal_baixo.h  megaman_pular.h  megaman_tiro_simples.h
backup_seguro/include/ui/: go_sign.h  ui_barra_carregado.h
backup_seguro/sprite/: sprite.c
backup_seguro/src/: fase1_logic.c  fase3_logic.c  hardware_state.c  ui.c
cenario/: cenario.c
cenario/fase1/: fase1_dados.c
cenario/fase1_5/: fase1_5_dados.c
docs/: 01-toolchain-setup.md  02-build-e-execucao.md  03-arquitetura.md  04-portabilidade-de1soc.md  05-problemas-resolvidos.md  06-transferencia-ethernet.md  COMO_TRANSFERIR_ETHERNET.md  README.md
docs/slides_prof/: Relatorio (1).tex
final_tela/: final_tela_dados.c
framebuffer/: framebuffer_de1soc.c  framebuffer_sdl.c
game_over/: game_over.c  game_over_dados.c
include/animacao/: animacao.h
include/ataques/tiros/: tiro.h
include/cenario/: cenario.h  fases.h
include/cenario/fase1/: fase1.h
include/cenario/fase1_5/: fase1_5.h
include/cenario/fase2/: fase2.h
include/cenario/fase3/: fase3.h
include/colisao/: colisao.h
include/final_tela/: final_tela.h
include/framebuffer/: framebuffer.h
include/game_over/: game_over.h
include/hardware/: hardware_state.h
include/icones/: icone_instakill.h  icone_super_pulo.h  icone_velocidade.h  icone_vida.h
include/inimigo/: inimigo.h
include/inimigos/copycat/: copycat.h
include/inimigos/goomba/: goomba.h  goomba_anm.h
include/inimigos/soldado/: soldado.h  soldado_atirar.h  soldado_atirar_agachado.h  soldado_correr.h  soldado_explosao.h  soldado_morrer.h  soldado_parado.h  soldado_paraquedas.h  soldado_tiro.h
include/inimigos/spider_jockey/: spider_jockey.h  spider_jockey_anm.h  spider_jockey_arrow.h  spider_jockey_sprites.h
include/inimigos/tank/: tank.h  tank_death_sprites.h  tank_idle_sprites.h  tank_shooting_sprites.h  tank_sprites.h
include/menu/: menu.h
include/personagem/: jogador.h
include/personagem/achilles/movimentos/: achilles.h  achilles_andar.h  achilles_idle.h  achilles_morrer.h  achilles_pulo.h  achilles_tiro.h
include/personagem/megamem/movimentos/: megaman.h  megaman_atirar.h  megaman_atirar_baixo.h  megaman_atirar_cima.h  megaman_atirar_diagonal_baixo.h  megaman_atirar_diagonal_cima.h  megaman_correr.h  megaman_morrer.h  megaman_pular.h  megaman_tiro_carregado.h  megaman_tiro_simples.h
include/sprite/: sprite.h
include/ui/: go_sign.h  ui.h  ui_barra_carregado.h  ui_barra_normal.h  ui_preenchimento_carregado.h  ui_preenchimento_normal.h
inimigo/: inimigo.c
inimigos/copycat/: copycat.c
inimigos/goomba/: goomba.c
inimigos/tank/: tank.c
menu/: menu.c  menu_dados.c  press_start_dados.c
novos/: Goomba_Enemy.c  salaEspelhada.c  spider_jockey_CNV.c  spider_jockey_anm.c  spider_jockey_arrow.c  spider_jockey_arrow_CNV.c  tank_death.c  tank_idle.c  tank_shooting0-8_fire_9-10.c
scripts/: send_metalslug.py
src/: fase1_5_logic.c  fase1_logic.c  fase2_logic.c  fase3_logic.c  hardware_state.c  jogador.c  main.c  ui.c
src/animacao/: animacao.c
src/ataques/tiros/: tiro.c
src/cenario/: cenario.c
src/cenario/fase1/: fase1_dados.c
src/cenario/fase1_5/: fase1_5_dados.c
src/cenario/fase3/: fase3_dados.c
src/colisao/: colisao.c
src/final_tela/: final_tela.c  final_tela_dados.c
src/framebuffer/: framebuffer_de1soc.c  framebuffer_sdl.c
src/game_over/: game_over.c  game_over_dados.c
src/inimigo/: inimigo.c
src/inimigos/copycat/: copycat.c
src/inimigos/goomba/: goomba.c
src/inimigos/spider_jockey/: spider_jockey.c
src/inimigos/tank/: tank.c
src/menu/: menu.c  menu_dados.c  press_start_dados.c
src/sprite/: sprite.c
